# archive-generator

./: .gitignore  LICENSE  README.md  build-tex4ht.py  build.py  clean.sh  extract-junior.py  pyproject.toml  run-tex4ht.sh  run.sh  tex4ht.py
templates/junior/: _comma.tex  _dot.tex  _fr.tex  cs.tex  en.tex  fr.tex
