[tool.poetry]
name = "archive-generator"
version = "0.1.0"
description = ""
authors = ["Adam Zahradník <adam@zahradnik.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
css-inline = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
